--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "easymath",
   "version": "1.0.0",
+  "proxy": "http://localhost:5000",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -12,12 +13,19 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@types/react": "~18.2.14",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "^0.19.9"
+    "react-native-web": "^0.19.9",
+    "react-query": "^3.39.3",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
