--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "^0.19.9",
     "react-query": "^3.39.3",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
